backon-macros/tests/cases/fail_method_self_context.rs
use backon_macros::backon;

struct Client;

impl Client {
    #[backon(context = true)]
    fn fetch(&self) -> Result<(), ()> {
        Ok(())
    }
}

fn main() {}
